<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityControllers.UserActivity">

    <ScrollView
            android:layout_width="421dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="Name"
                        android:ems="10"
                        android:id="@+id/emailF"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="248dp" android:layout_marginEnd="108dp"
                        android:layout_marginRight="108dp"/>
                <TextView
                        android:text="@string/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView"
                        app:layout_constraintBottom_toTopOf="@+id/passwordF" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="260dp" android:layout_marginRight="260dp"/>
                <TextView
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/emailV"
                        app:layout_constraintBottom_toTopOf="@+id/emailF" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="288dp" android:layout_marginRight="288dp"/>
                <TextView
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/nameV"
                        app:layout_constraintBottom_toTopOf="@+id/nameF" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="260dp" android:layout_marginRight="260dp"/>
                <TextView
                        android:text="@string/number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/numberV"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="228dp" android:layout_marginRight="228dp"
                        app:layout_constraintBottom_toTopOf="@+id/phoneNumberF"/>
                <Button
                        android:text="@string/saveUserButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/confirmB"
                        android:onClick="updateUser"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/phoneNumberF"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="168dp"
                        android:layout_marginRight="168dp"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="Name"
                        android:ems="10"
                        android:id="@+id/nameF"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/emailF"
                        android:layout_marginTop="72dp" android:layout_marginEnd="108dp"
                        android:layout_marginRight="108dp"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="Number"
                        android:ems="10"
                        android:id="@+id/phoneNumberF"
                        android:layout_marginTop="72dp"
                        app:layout_constraintTop_toTopOf="@+id/nameF" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="108dp" android:layout_marginRight="108dp"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/passwordF"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="176dp" android:layout_marginEnd="108dp"
                        android:layout_marginRight="108dp"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="Username"
                        android:ems="10"
                        android:id="@+id/usernameF"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="104dp" android:layout_marginEnd="108dp"
                        android:layout_marginRight="108dp"/>
                <TextView
                        android:text="@string/username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/usernameL"
                        app:layout_constraintBottom_toTopOf="@+id/usernameF" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="256dp" android:layout_marginRight="256dp"/>
                <Button
                        android:text="@string/sign_out_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button2"
                        android:onClick="signOut"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"/>
                <Button
                        android:text="@string/back_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button3"
                        android:onClick="backToMain"
                        app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="196dp"
                        android:layout_marginRight="196dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp"/>
                <TextView
                        android:text="@string/my_reservations_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView2"
                        android:textSize="20sp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/order_list"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"/>
                <ExpandableListView
                        android:layout_width="406dp"
                        android:layout_height="600dp"
                        android:id="@+id/order_list"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="560dp" android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>